@@ -1,3 +1,10 @@
+2003-08-21  Tim Legant  <tim@catseye.net>
+
+	* Pending.py (initQueue): After reading message list from stdin,
+	close stdin and re-open on the tty, so interactive operation is
+	possible.  Also, minor change to allow multiple message names on
+	the same line while reading stdin.
+
 2003-08-19  Jason R. Mastaler  <jason@mastaler.com>
 
 	* FilterParser.py (_FilterFile.__init__): confirm can now take an
